--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,11 @@
-<!DOCTYPE html>
-<h1>title_h1</h1>
-<h2>title_h2</h2>
-<h3>title_h3</h3>
-<h6>title_h6</h6>
-<h10>title_h10</h10>
-<p>paragraph</p>
+<!doctype html>
+<html>
+	<head>
+		<title> HTML5
+		</title>
+	</head>
+
+	<bodY>
+	</bodY>
+	
+</html>
