--- a/html/index.html
+++ b/html/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
-<html>
+<html lang="ko">
 	<head>
 		<title> HTML5
 		</title>
 	</head>
 
 	<bodY>
+		<p title="world wide web consortium" lang="en">W3C
+		</p>
 	</bodY>
-	
+
 </html>
