--- a/html/index.html
+++ b/html/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="ko">
 	<head>
-		<title> HTML5
-		</title>
+		<meta charset="utf-8" />
+		<title> HTML5</title>
 	</head>
 
 	<bodY>
