--- a/html/index.html
+++ b/html/index.html
@@ -6,8 +6,8 @@
 	</head>
 
 	<bodY>
-		<p title="world wide web consortium" lang="en">W3C
-		</p>
+		<p title="world wide web consortium" lang="en">W3C</p>
+		<p>Hello, World!</p>
 	</bodY>
 
 </html>
