--- a/html/index.html
+++ b/html/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="ko">
-	<head>
-		<meta charset="utf-8" />
-		<title> HTML5</title>
-	</head>
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width" />
+	<title> HTML5</title>
+</head>
 
-	<bodY>
-		<p title="world wide web consortium" lang="en">W3C</p>
-		<p>Hello, World!</p>
-	</bodY>
+<bodY>
+	<p title="world wide web consortium" lang="en">W3C</p>
+	<p>Hello, World!</p>
+</bodY>
 
 </html>
