css파일의 위치를 옮기고, 불러오는 주소도 바꾸었다.
.

--- a/html/index_last.html
+++ b/html/index_last.html
@@ -10,7 +10,7 @@
 	<!-- maximum-scale의 기본값은 2 -->
 	<title> 구지봉 - F.E. Camp - Fast Campus</title>
 	<!-- 타이틀을 적을 때엔, 하위페이지를 앞쪽에 적어줘야, 탭이 작아져도 보인다. 시각장애인에게도 좋다. -->
-	<link rel="stylesheet" href="css/default.css">
+	<link rel="stylesheet" href="default.css">
 	<!-- rel=relation, href=hyper-text reference -->
 	<!-- ..은 부모 디렉토리이다. -->
 	<!--[if lt IE 9]>
