--- a/html/index.html
+++ b/html/index.html
@@ -6,9 +6,8 @@
 	<meta name="viewport" content="width=device-width">
 	<!-- 모바일에서 화면에 페이지 전체를 억지로 구겨넣는 일이 없도록 방지하는, 모바일 전용 코드 -->
 	<!-- <meta name="viewport" content="width=device-width,initial-scale=2, minimum-scale=1, maximum-scale=2, user-scalable=no" /> -->
-	<!-- minimum-scale의 기본값은 0.5 -->
-	<!-- maximum-scale의 기본값은 2 -->
-	<title> 구지봉 - F.E. Camp - Fast Campus</title>
+	<!-- minimum-scale의 기본값은 0.5 maximum-scale의 기본값은 2 -->
+	<title>수업</title>
 	<!-- 타이틀을 적을 때엔, 하위페이지를 앞쪽에 적어줘야, 탭이 작아져도 보인다. 시각장애인에게도 좋다. -->
 	<link rel="stylesheet" href="default.css">
 	<!-- rel=relation, href=hyper-text reference -->
@@ -65,9 +64,6 @@
 						</ul>
 					</li>
 				</ul>
-				<!-- ul = unorderd list -->
-				<!-- ol = ordered list -->
-				<!-- li = list item -->
 				<!-- ul과 li사이에는 다른 어떤 태그도 끼어들면 안된다. -->
 			</nav>
 			<form class="search">
@@ -82,7 +78,10 @@
 		<!-- 이 디비전은 wrapper로써, 세개의 칼럼(박스)들을 하나로 묶어주는, 권장사항이다. -->
 			<main id="main">
 			<!-- URL로 사용하기 위하여 아이디를 부여하였다. -->
-				#main
+				<article>
+					<img src="http://dummyimage.com/1024x100/000/fff" alt>
+				</article>
+
 			</main>
 			<!-- 메인 엘리먼트 안에는, 다른페이지에 반복되지 않는 것이 들어가야 한다. -->
 			<!-- 한페이지에서 한번만 사용할 수 있다. -->
