--- a/homeWork/week2.html
+++ b/homeWork/week2.html
@@ -15,49 +15,61 @@
 	 */
 
 	// 문제1: 1초마다 한번씩 '틱'이라는 글자를 콘솔에 출력하는 함수 tick()을 작성하라.
-function tick(){
-    console.log('tick');
-    setTimeout(1000);
-}
+        function tick(){
+            console.log('tick');
+            setTimeout(tick,1000);
+        };
+        tick();
 	// 문제2: 수학 관련 계산을 담당하는 Math 객체에는 원주율을 나타내는 Math.PI라는 값이 있다.
 	// 반지름 값 r을 입력할 때 원의 넓이를 반환하는 함수 circleArea() 함수를 작성하라.
 	// 힌트: 원의 넓이 = 반지름의_제곱 * 원주율
 	// 사용예: console.log(circleArea(5)); // 78.539816...
-function circleArea(r){
-    return Math.pow(r,2)*Math.PI;
-};
+        function circleArea(){
+            return Math.pow(arguments[0],2)*Math.PI;
+        };
 	// 문제3: 최솟값과 최댓값을 입력하면 그 사이의 랜덤한 숫자를 "소숫점 첫째자리"까지 반환하는
 	// 함수 randomFloat() 함수를 작성하라.
 	// 사용예: randomFloat(5, 10); // 5.3 또는 6.7 또는 7.8 또는 9.5
-function randomFloat(min,max){
-    var rand = (Math.random()*(max-min))+min;
-    return Math.round(rand);
-};
+        function randomFloat(){
+            var rand = (Math.random()*(arguments[1]-arguments[0]))+arguments[0];
+            return Math.round(rand);
+        };
 	// 문제4: Date 객체를 전달하면 "2015년 3월 21일 토요일"과 같이 날짜 문자열을 반환하는
 	// formatDate() 함수를 작성하라.
 	// 사용예:
 	// var date = new Date(1426863600000);
 	// console.log(formatDate(date)); // 출력 결과: 2015년 3월 21일 토요일
-function formatDate(date) {
-    var year = date.getFullYear();
-    var month = date.getMonth()+1;
-    var datedigit = date.getDate();
-    var day = '일월화수목금토'.substr(date.getDay(),1);
-    return year+'년 '+month+'월 '+datedigit+'일 '+day+'요일';
-};
+        function formatDate() {
+            var year = arguments[0].getFullYear();
+            var month = arguments[0].getMonth()+1;
+            var datedigit = arguments[0].getDate();
+            var day = '일월화수목금토'.substr(arguments[0].getDay(),1);
+            return year+'년 '+month+'월 '+datedigit+'일 '+day+'요일';
+        };
 	// 문제5: 생일을 입력하면 살아온 날짜를 숫자로 반환하는 함수 lifeTime()을 작성하라.
 	// 태어난 날을 1일로 센다.
 	// 사용예: console.log( lifeTime(1980, 2, 13) );
 	// 힌트: 테스트 할 때는 어제나 2일 전 등 가까운 날짜를 입력한 후 테스트 해보는 것이 편합니다.
-
-
+        function lifeTime() {
+                var birthDay = new Date(arguments[0], arguments[1]-1, arguments[2]);
+                return Math.ceil((Date.now()-birthDay)/(1000*60*60*24));
+        };
 	// 문제6: 인수로 전달된 시각까지 앞으로 남은 시간을 "1시간 10분 35초"처럼 1초마다 카운트다운하며
 	// 표시하는 countDown() 함수를 작성하라(실행 예는 https://youtu.be/-cdVk4KMPXw 참고).
 	// 힌트1: 문자열 표시는 console.log와 사용법이 똑같은 log() 함수를 사용해 출력하면 된다.
 	// 힌트2: countDown() 함수는 만들어두기만 하면 자동으로 실행된다.
 	// 사용예: countDown(2015, 3, 26, 13); // 3월 26일 오후 1시까지 남은 시간 표시
-
-	</script>
+        function countDown () {
+            var timeGoal = new Date(arguments[0],arguments[1]-1,arguments[2],arguments[3]);
+            var secondsLeft = (timeGoal-Date.now())/1000;
+            var hours = Math.floor(secondsLeft/60/60);
+            var mins = Math.floor((secondsLeft-hours*60*60)/60);
+            var secs = Math.round(secondsLeft-(hours*60*60)-(mins*60));
+            console.log(hours+'시간 '+mins+'분 '+secs+'초');
+            setTimeout(arguments.callee, 1000);
+        };
+        countDown(2015,3,26,21);
+    </script>
 </head>
 <body>
 	<div id="timer" style="position:absolute;right:20px;top:20px;color:#fff"></div>
