--- a/homeWork/week2.html
+++ b/homeWork/week2.html
@@ -17,7 +17,7 @@
 	// 문제1: 1초마다 한번씩 '틱'이라는 글자를 콘솔에 출력하는 함수 tick()을 작성하라.
         function tick(){
             console.log('tick');
-            setTimeout(tick,1000);
+            setTimeout(arguments.callee,1000);
         };
         tick();
 	// 문제2: 수학 관련 계산을 담당하는 Math 객체에는 원주율을 나타내는 Math.PI라는 값이 있다.
@@ -59,16 +59,27 @@
 	// 힌트1: 문자열 표시는 console.log와 사용법이 똑같은 log() 함수를 사용해 출력하면 된다.
 	// 힌트2: countDown() 함수는 만들어두기만 하면 자동으로 실행된다.
 	// 사용예: countDown(2015, 3, 26, 13); // 3월 26일 오후 1시까지 남은 시간 표시
+//        function countDown () {
+//            var timeGoal = new Date(arguments[0],arguments[1]-1,arguments[2],arguments[3]);
+//            var secondsLeft = (timeGoal-Date.now())/1000;
+//            var hours = Math.floor(secondsLeft/60/60);
+//            var mins = Math.floor((secondsLeft-hours*60*60)/60);
+//            var secs = Math.floor(secondsLeft-(hours*60*60)-(mins*60));
+//            console.log(hours+'시간 '+mins+'분 '+secs+'초');
+//        };
+//        countDown(2015,3,26,21);
         function countDown () {
             var timeGoal = new Date(arguments[0],arguments[1]-1,arguments[2],arguments[3]);
-            var secondsLeft = (timeGoal-Date.now())/1000;
-            var hours = Math.floor(secondsLeft/60/60);
-            var mins = Math.floor((secondsLeft-hours*60*60)/60);
-            var secs = Math.round(secondsLeft-(hours*60*60)-(mins*60));
-            console.log(hours+'시간 '+mins+'분 '+secs+'초');
-            setTimeout(arguments.callee, 1000);
-        };
-        countDown(2015,3,26,21);
+            function innerCount (){
+                var secondsLeft = (timeGoal-Date.now())/1000;
+                var hours = Math.floor(secondsLeft/60/60);
+                var mins = Math.floor((secondsLeft-hours*60*60)/60);
+                var secs = Math.floor(secondsLeft-(hours*60*60)-(mins*60));    
+                console.log(hours+'시간 '+mins+'분 '+secs+'초');
+                setTimeout(innerCount, 1000);
+            }
+        }
+        countDown(2015, 3, 26, 22);
     </script>
 </head>
 <body>
