--- a/homeWork/week2.html
+++ b/homeWork/week2.html
@@ -70,14 +70,13 @@
 //        countDown(2015,3,26,21);
         function countDown () {
             var timeGoal = new Date(arguments[0],arguments[1]-1,arguments[2],arguments[3]);
-            function innerCount (){
-                var secondsLeft = (timeGoal-Date.now())/1000;
-                var hours = Math.floor(secondsLeft/60/60);
-                var mins = Math.floor((secondsLeft-hours*60*60)/60);
-                var secs = Math.floor(secondsLeft-(hours*60*60)-(mins*60));    
-                console.log(hours+'시간 '+mins+'분 '+secs+'초');
-                setTimeout(innerCount, 1000);
-            }
+            var secondsLeft = (timeGoal-Date.now())/1000;
+            var hours = Math.floor(secondsLeft/60/60);
+            var mins = Math.floor((secondsLeft-hours*60*60)/60);
+            var secs = Math.floor(secondsLeft-(hours*60*60)-(mins*60));    
+            log(hours+'시간 '+mins+'분 '+secs+'초');
+            setTimeout(fucntion(){countDown();}, 1000);
+
         }
         countDown(2015, 3, 26, 22);
     </script>
