--- a/homeWork/week1.html
+++ b/homeWork/week1.html
@@ -23,7 +23,7 @@
     // 답2.
         function 세제곱 () {
             for ( i = 0; i < arguments.length; i++ ) { 
-                console.log(Math.pow(arguments[i],3));  
+                return Math.pow(arguments[i],3);  
             }
         }
         세제곱(1);
@@ -64,16 +64,10 @@
 	// 하나
 	// 둘
 	// 셋
-    // 답1.
-        //        function 답5(arr){
-//            console.log(arr.join('\n'));
-//        };
-    // 답2.
         function 답5(arr){
-            for ( i = 0; i < arr.length; i++ ){
-                console.log( arr[i] );
-            }
-        }
+            console.log(arr.join('\n'));
+        };
+
 	</script>
 </head>
 <body>
