--- a/homeWork/week4.html
+++ b/homeWork/week4.html
@@ -38,21 +38,45 @@
 	// 단, 상자는 그냥 클릭하면 오른쪽으로 10픽셀 이동하고 Alt 키를 누른채 클릭하면 왼쪽으로 10픽셀 이동해야 한다.
 	// 힌트1: 이벤트 객체의 altKey 프로퍼티를 사용하면 Alt 키가 눌렸는지 확인할 수 있습니다.
 	// 힌트2: 문자열을 숫자로 변환하는 과정이 필요할 것입니다.
+
+//     답 3-1.
+//        jQuery (function ($) {
+//            $('#box').on('click', function (event) {
+//                var style = $('#box').attr('style');
+//                var props = style.split(';');
+//                var regex = /\d+/;
+//                var value = regex.exec(props[2]);
+//                
+//                if ( event.altKey) {
+//                    value = +value - 10;
+//                } else {
+//                    value = +value + 10;
+//                }
+//                style = $('#box').attr('style', props[0]+';'+props[1]+';'+'left:'+value+'px;'+props[3]+';'+props[4]+';'+props[5]);
+//            });
+//        })
+        
         jQuery (function ($) {
-            $('#box').on('click', function (event) {
-                var style = $('#box').attr('style');
-                var props = style.split(';');
+            var style = $( '#box' ).attr( 'style' );
+            var props = style.split( ';' );
+
+            for ( var i = 0; i < props.length; i++ ) {
+                if ( props[i].substr(0, 5) === 'left:' ) {
                 var regex = /\d+/;
-                var value = regex.exec(props[2]);
-                
-                if ( event.altKey) {
-                    value = +value - 10;
-                } else {
-                    value = +value + 10;
+                var value = regex.exec(props[i]);
+                var arrNum = i;
                 }
-                style = $('#box').attr('style', props[0]+';'+props[1]+';'+'left:'+value+'px;'+props[3]+';'+props[4]+';'+props[5]);
-            });
-        })
+            }
+            $( '#box' ).on( 'click', function (event) {
+                if (event.altKey) {
+                value = +value - 10;
+                } else {
+                value = +value + 10;
+                }
+                props[arrNum] = 'left:'+value+'px;';
+                $( '#box' ).attr( 'style', props.join(';') );
+                });
+        });
 	</script>
 </head>
 <body>
